tests/baselines/reference/parserModuleDeclaration3.errors.txt
tests/cases/conformance/parser/ecmascript5/ModuleDeclarations/parserModuleDeclaration3.ts(2,3): error TS1038: A 'declare' modifier cannot be used in an already ambient context.


==== tests/cases/conformance/parser/ecmascript5/ModuleDeclarations/parserModuleDeclaration3.ts (1 errors) ====
    declare module M {
      declare module M2 {
      ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
      }
    }